--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    
     <!-- displays site properly based on user's device -->
 
     <link
@@ -14,8 +19,58 @@
 
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
+
   <body>
-    Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount /
-    person Total / person Reset
+    <header>
+      <p id="titleText">S P L T<br>T T E R</p>
+    </header>
+
+    <main>
+        <section id="leftSection">
+          <div id="leftSection_Container">
+          <div class="leftBox">
+            <p>Bill</p>
+            <input type="text" placeholder="$" class="left_Input">
+          </div>
+
+          <div class="leftBox">
+            <p>Select Tip %</p>
+            <button class="percentBox">5%</button>
+            <button class="percentBox">15%</button>
+            <button class="percentBox">20%</button>
+            <button class="percentBox">25%</button>
+            <button class="percentBox">50%</button>
+            <input type="text" class="percentBox">
+          </div>
+
+          <div class="leftBox">
+            <p>Number of People</p>
+            <p id="bottom_text">Can't be zero</p>
+            <input type="text" class="left_Input" id="num_Input">
+          </div>
+        </div>
+        </section>
+
+        <section id="rightSection">
+          <div id="rightSection_Box">
+            <div id="tip">
+              <p class="text1">Tip Amount</p>
+              <p class="text2">/ person</p>
+            </div>
+
+          </div>
+          <div>
+            <div id="total">
+              <p class="text1">Total</p>
+              <p class="text2">/ person</p>
+            </div>
+            <p></p>
+          </div>
+
+          <button id="reset">RESET</button>
+        </section>
+    </main>
+    
+    <script src = "index.js"></script>
   </body>
 </html>
