--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="src/index.css" />
 
     <link
       rel="icon"
@@ -68,6 +68,6 @@
       </section>
 
     </section>
-    <script src="index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
