--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,72 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="../images/favicon-32x32.png"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
   <body>
-    Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount /
-    person Total / person Reset
+    <header>
+      <img class="logo" src="../images/logo.svg" alt="logo">
+    </header>
+
+    <main>
+      <section class="left">
+        <!-- bill -->
+        <section class="bill">
+          <p class="bill__title title">Bill</p>
+          <input class="bill__input" type="text" placeholder="0">
+        </section>
+        <!-- tip -->
+        <section class="tip">
+          <p class="tip__title title">Select Tip %</p>
+          <div class="tip__buttons">
+            <button class="tip__button">5%</button>
+            <button class="tip__button">10%</button>
+            <button class="tip__button">15%</button>
+            <button class="tip__button">25%</button>
+            <button class="tip__button">50%</button>
+            <input class="tip__button tip__input" type="text" placeholder="Custom">
+          </div>
+        </section>
+        <!-- people -->
+        <section class="people">
+          <p class="people__title title">
+            Number of People
+            <span class="people__title__error">Can't be zero</span>
+          </p>
+          <input class="people__input" type="text" placeholder="0">
+        </section>
+      </section>
+
+      <section class="right">
+        <!-- tip amount -->
+        <section class="tip-amount">
+          <div class="tip-amount__left">
+            <p class="tip-amount__title">Tip Amount</p>
+            <p class="tip-amount__text">/ person</p>
+          </div>
+          <p class="tip-amount__amount">$0.00</p>
+        </section>
+        <!-- total -->
+        <section class="total">
+          <div class="total__left">
+            <p class="total__title">Total</p>
+            <p class="total__text">/ person</p>
+          </div>
+          <p class="total__amount">$0.00</p>
+        </section>
+        <!-- reset -->
+        <button class="reset" disabled>RESET</button>
+      </section>
+    </main>
+    
   </body>
 </html>
