--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Frontend Mentor | Tip calculator app</title>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <header>
@@ -36,11 +38,11 @@
         <section class="tip">
           <p class="tip__title title">Select Tip %</p>
           <div class="tip__buttons">
-            <button class="tip__button">5%</button>
-            <button class="tip__button">10%</button>
-            <button class="tip__button">15%</button>
-            <button class="tip__button">25%</button>
-            <button class="tip__button">50%</button>
+            <button class="tip__button" data-val="5">5%</button>
+            <button class="tip__button" data-val="10">10%</button>
+            <button class="tip__button" data-val="15">15%</button>
+            <button class="tip__button" data-val="25">25%</button>
+            <button class="tip__button" data-val="50">50%</button>
             <input class="tip__button tip__input" type="text" placeholder="Custom">
           </div>
         </section>
@@ -50,7 +52,7 @@
             Number of People
             <span class="people__title__error">Can't be zero</span>
           </p>
-          <input class="people__input" type="text" placeholder="0">
+          <input class="people__input" type="text" value="1">
         </section>
       </section>
 
@@ -75,6 +77,5 @@
         <button class="reset" disabled>RESET</button>
       </section>
     </main>
-    
   </body>
 </html>
