chore: 이미지 주소 수정

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
 
-    <picture class="title"><img src="../images/logo.svg"></picture>
+    <picture class="title"><img src="images/logo.svg"></picture>
 
     <section class="container">
       <section class="container__item1">
